--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "short-lnk",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --driver-package=cultofcoders:mocha"
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
+    "expect": "^23.6.0",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.22.2",
     "react": "^15.4.1",
@@ -15,5 +17,6 @@
   },
   "engines": {
     "node": "8.11.4"
-  }
+  },
+  "devDependencies": {}
 }
