--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "expect": "^23.6.0",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
